MNIST dataset classification notebook

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ jupyter==1.0.0
 jupyter-client==5.3.4
 jupyter-console==6.0.0
 jupyter-core==4.6.1
+Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
@@ -51,6 +52,7 @@ pyparsing==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
 pytz==2019.3
+PyYAML==5.1.2
 pyzmq==18.1.0
 qtconsole==4.5.5
 scikit-learn==0.21.3
