--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ astor==0.8.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
+certifi==2019.9.11
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
@@ -11,6 +13,7 @@ gast==0.3.2
 google-pasta==0.1.7
 grpcio==1.24.3
 h5py==2.10.0
+idna==2.8
 importlib-metadata==0.23
 ipykernel==5.1.3
 ipython==7.9.0
@@ -33,6 +36,7 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 mistune==0.8.4
 more-itertools==7.2.0
+multitasking==0.0.9
 nbconvert==5.6.1
 nbformat==4.4.0
 notebook==6.0.1
@@ -55,6 +59,7 @@ pytz==2019.3
 PyYAML==5.1.2
 pyzmq==18.1.0
 qtconsole==4.5.5
+requests==2.22.0
 scikit-learn==0.21.3
 scipy==1.3.1
 seaborn==0.9.0
@@ -70,9 +75,11 @@ terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
 traitlets==4.3.3
+urllib3==1.25.6
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.16.0
 widgetsnbextension==3.5.1
 wrapt==1.11.2
+yfinance==0.1.49
 zipp==0.6.0
